[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/battle_message_box.gd" id="1"]

[node name="BattleMessageBox" type="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MessageLabel" type="RichTextLabel" parent="MarginContainer" unique_name_in_owner=true]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
fit_content = true
visible_characters = 0

[node name="AdvanceIndicator" type="Label" parent="." unique_name_in_owner=true]
layout_mode = 2
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "â–¼"
horizontal_alignment = 2
vertical_alignment = 2
visible = false
